# simple-tr8n-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ThirdPartyNotices.txt
ThirdPartyNotices/: GSL.txt  README.md  string-view-lite.txt
cmake/: GetCPM.cmake  SimpleTr8nConfig.cmake  SimpleTr8nDefaults.cmake  SimpleTr8nDeps.cmake  SimpleTr8nTargets.cmake
dependencies/: CMakeLists.txt  package-lock.cmake
src/: CMakeLists.txt
src/simple_tr8n/: CMakeLists.txt  exceptions.hpp  simple_translator.hpp  simple_translator_test.cpp  string_view.hpp  translator.hpp
